--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ font-size: 1.25rem;
 </div>
 </div>
 <div class="w-full md:w-1/2 flex justify-center md:justify-center animate-fadeIn delay-200">
-<img src="avtaar.png" alt="My Avtaar" class="w-60 md:w-80 lg:w-[300px] h-auto  md:-ml-5.5 md:-mt-6">
+<img src="main-avtaar.png" alt="My Avtaar" class="w-60 md:w-80 lg:w-[300px] h-auto  md:-ml-5.5 md:-mt-6">
 </div>
 </div>
 </section>
