--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@ font-size: 1.25rem;
             <div class="w-10 h-10 flex items-center justify-center bg-secondary/10 rounded-full mr-4">
               <i class="ri-phone-line text-secondary ri-lg"></i>
             </div>
-            <div>
+<!--             <div>
               <h4 class="font-bold text-lg mb-1">Phone</h4>
               <p class="text-darkGray/80">+91 98765 43210</p>
-            </div>
+            </div> -->
           </div>
           <!-- Location -->
           <div class="flex items-start">
@@ -446,7 +446,7 @@ font-size: 1.25rem;
             </div>
             <div>
               <h4 class="font-bold text-lg mb-1">Location</h4>
-              <p class="text-darkGray/80">Mumbai, India</p>
+              <p class="text-darkGray/80">India</p>
             </div>
           </div>
         </div>
@@ -459,7 +459,7 @@ font-size: 1.25rem;
           <a href="https://www.instagram.com/creativethingx_/" class="w-10 h-10 flex items-center justify-center bg-darkGray rounded-full text-white hover:bg-primary transition">
             <i class="ri-instagram-line"></i>
           </a>
-          <a href="#" class="w-10 h-10 flex items-center justify-center bg-darkGray rounded-full text-white hover:bg-primary transition">
+<!--           <a href="#" class="w-10 h-10 flex items-center justify-center bg-darkGray rounded-full text-white hover:bg-primary transition">
             <i class="ri-behance-line"></i>
           </a>
           <a href="#" class="w-10 h-10 flex items-center justify-center bg-darkGray rounded-full text-white hover:bg-primary transition">
@@ -467,7 +467,7 @@ font-size: 1.25rem;
           </a>
           <a href="#" class="w-10 h-10 flex items-center justify-center bg-darkGray rounded-full text-white hover:bg-primary transition">
             <i class="ri-linkedin-line"></i>
-          </a>
+          </a> -->
         </div>
       </div>
 
@@ -588,7 +588,7 @@ behavior: 'smooth'
         });
 
         if (response.ok) {
-          alert('✅ Message sent successfully! Thank you :)');
+          alert('✅ Message sent successfully! Thank you for your message. I will get back to you soon :)');
           form.reset();
         } else {
           alert('❌ Failed to send message. Please try again.');
