--- a/index.html
+++ b/index.html
@@ -430,10 +430,10 @@ font-size: 1.25rem;
             </div>
           </div>
           <!-- Phone -->
-          <div class="flex items-start">
+<!--           <div class="flex items-start">
             <div class="w-10 h-10 flex items-center justify-center bg-secondary/10 rounded-full mr-4">
               <i class="ri-phone-line text-secondary ri-lg"></i>
-            </div>
+            </div> -->
 <!--             <div>
               <h4 class="font-bold text-lg mb-1">Phone</h4>
               <p class="text-darkGray/80">+91 98765 43210</p>
