--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ font-size: 1.25rem;
               <h4 class="font-bold text-lg mb-1">Phone</h4>
               <p class="text-darkGray/80">+91 98765 43210</p>
             </div> -->
-          </div>
+<!--           </div> -->
           <!-- Location -->
           <div class="flex items-start">
             <div class="w-10 h-10 flex items-center justify-center bg-olive/10 rounded-full mr-4">
