--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="Explore my work as a graphic designer. Portfolio, projects, and contact info.">
+  <meta name="keywords" content="Graphic designer, Portfolio, Photoshop, Canva, Thumbnails, Product post">
    <!-- For .png file -->
 <link rel="icon" href="favicon1.png" type="image/png">
 <title>Aryan Rawat | Graphic Designer</title>
