--- a/index.html
+++ b/index.html
@@ -2,12 +2,39 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+
+<!--      Open Graph Tags (for social sharing) -->
+<meta property="og:title" content="Aryan Rawat | Freelance Graphic Designer in India" />
+<meta property="og:description" content="Explore Aryan's graphic design portfolio: thumbnails, ad creatives, and more." />
+<meta property="og:image" content="URL-to-your-main-image.jpg" />
+<meta property="og:url" content="https://your-website-url.com" />
+<meta name="twitter:card" content="summary_large_image" />
+
+<!--      Structured Data (Schema.org) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Aryan Rawat",
+  "url": "https://your-website-url.com",
+  "jobTitle": "Freelance Graphic Designer",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "CreativeThingx"
+  },
+  "sameAs": [
+    "https://www.instagram.com/creativethingx_/"
+  ]
+}
+</script>
+
+     
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <meta name="description" content="Explore my work as a graphic designer. Portfolio, projects, and contact info.">
-  <meta name="keywords" content="Graphic designer, Portfolio, Photoshop, Canva, Thumbnails, Product post">
+     <meta name="description" content="Hi, I'm Aryan Rawat — a freelance graphic designer in India. Explore my portfolio of creative thumbnails, Canva designs, ad creatives, product posts, and more. Let's work together!">
+  <meta name="keywords" content="Freelance Graphic Designer, Canva Designer, Photoshop Expert, YouTube Thumbnail Designer, Social Media Post Designer, India, Aryan Rawat">
    <!-- For .png file -->
 <link rel="icon" href="favicon1.png" type="image/png">
-<title>Aryan Rawat | Graphic Designer</title>
+<title>Aryan Rawat | Freelance Graphic Designer in India | Portfolio & Projects</title>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
@@ -192,7 +219,7 @@ font-size: 1.25rem;
 </div>
 </div>
 <div class="w-full md:w-1/2 flex justify-center md:justify-center animate-fadeIn delay-200">
-<img src="main-avtaar.png" alt="My Avtaar" class="w-60 md:w-80 lg:w-[300px] h-auto  md:-ml-5.5 md:-mt-6">
+<img src="main-avtaar.png" alt="Aryan Rawat - Freelance Graphic Designer Portfolio" class="w-60 md:w-80 lg:w-[300px] h-auto  md:-ml-5.5 md:-mt-6">
 </div>
 </div>
 </section>
