--- a/index.html
+++ b/index.html
@@ -184,6 +184,11 @@ font-size: 1.25rem;
 font-size: 1.25rem;
 }
 }
+  .protected-image {
+  -webkit-user-drag: none;
+  user-select: none;
+  pointer-events: none; /* Optional: blocks right-click too */
+}
 </style>
 </head>
 <body class="bg-lightGray text-darkGray">
@@ -232,7 +237,7 @@ font-size: 1.25rem;
 </div>
 <div class="flex flex-col md:flex-row items-center gap-12 about-section">
 <div class="w-full md:w-2/5">
-<img src="my pic.png" alt="Aryan at work" class="rounded-lg shadow-xl lg:w-[350px] w-65 h-auto about-image">
+<img src="my pic.png" alt="Aryan at work" class="rounded-lg shadow-xl lg:w-[350px] w-65 h-auto about-image protected-image">
 </div>
 <div class="w-full md:w-3/5">
 <h3 class="text-2xl md:text-3xl font-bold mb-6 text-primary">Creative Designer & Visual Storyteller</h3>
@@ -633,6 +638,16 @@ behavior: 'smooth'
   });
 </script>
 
+  <script>
+  document.addEventListener('DOMContentLoaded', function () {
+    const image = document.querySelector('.protected-image');
+    if (image) {
+      image.addEventListener('contextmenu', function (e) {
+        e.preventDefault();
+      });
+    }
+  });
+</script>
 
 </body>
 </html>
