--- a/index.html
+++ b/index.html
@@ -675,9 +675,13 @@ const projectImages = {
 
 ],
 'ad-creatives': [
-'ad-creatives.png',
-'https://readdy.ai/api/search-image?query=social%20media%20ad%20creative%2C%20vibrant%20colors%2C%20modern%20design%2C%20high%20engagement%2C%20professional%20graphic%20design&width=600&height=400&seq=12355&orientation=landscape',
-'https://readdy.ai/api/search-image?query=banner%20ad%20design%2C%20sleek%20and%20modern%2C%20professional%20graphic%20design&width=600&height=400&seq=12356&orientation=landscape'
+'BRIYANI-pamplet.png',
+  'burger-pamplet-2.png',
+  'burger2-post.jpg',
+  'chillie-pamplet2.png',
+  'pizza-pamplet1.jpg',
+  'shrimp.jpg',
+  'starbucks-pamplet.png'
 ],
 'product-posts': [
 'Product-designs.png',
