--- a/index.html
+++ b/index.html
@@ -684,9 +684,10 @@ const projectImages = {
   'starbucks-pamplet.png'
 ],
 'product-posts': [
-'Product-designs.png',
-'https://readdy.ai/api/search-image?query=product%20post%20design%2C%20ecommerce%2C%20vibrant%20colors%2C%20modern%20design%2C%20professional%20graphic%20design&width=600&height=400&seq=12357&orientation=landscape',
-'https://readdy.ai/api/search-image?query=product%20post%20design%2C%20minimalist%2C%20clean%20layout%2C%20professional%20graphic%20design&width=600&height=400&seq=12358&orientation=landscape'
+'bluetooth-poster.png',
+  'earbuds-pamplet.png',
+  'oats1.jpg',
+  'shoes-design.png'
 ],
 'techwave': [
 'https://readdy.ai/api/search-image?query=animated%20logo%20reveal%20and%20motion%20graphics%20for%20tech%20startup%2C%20showing%20dynamic%20transitions%20and%20modern%20design%20elements%2C%20professional%20motion%20design%2C%20high%20quality%20animation%20frames&width=600&height=400&seq=12350&orientation=landscape',
