--- a/index.html
+++ b/index.html
@@ -437,14 +437,14 @@ pointer-events: none;
 <div class="project-card-image">
 <img src="https://readdy.ai/api/search-image?query=animated%20logo%20reveal%20and%20motion%20graphics%20for%20tech%20startup%2C%20showing%20dynamic%20transitions%20and%20modern%20design%20elements%2C%20professional%20motion%20design%2C%20high%20quality%20animation%20frames&width=600&height=400&seq=12350&orientation=landscape" class="protected-image" alt="TechWave Motion Graphics">
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
-<h3 class="text-xl font-bold mb-2">TechWave Motion Graphics</h3>
-<p class="text-center mb-4">Animated logo and brand elements for tech startup</p>
+<h3 class="text-xl font-bold mb-2">Portrait ad graphics</h3>
+<p class="text-center mb-4">The Graphic That Speaks Before You Even Read It</p>
 <span class="px-4 py-1 bg-white/20 rounded-full text-sm">Motion Graphics</span>
 </div>
 </div>
 <div class="p-6">
-<h3 class="text-xl font-bold mb-2 text-darkGray">TechWave Motion Graphics</h3>
-<p class="text-darkGray/80 mb-4">Designed and animated a dynamic logo reveal and motion graphics package for a technology startup's digital presence.</p>
+<h3 class="text-xl font-bold mb-2 text-darkGray">Portrait ad graphics</h3>
+<p class="text-darkGray/80 mb-4">Creating Scroll-Stopping Designs That Match the Vibe of Trending Instagram Story & Reel Ads Everyone’s Watching Right Now!</p>
 <a href="#" class="text-burgundy font-medium hover:underline open-modal">View Project</a>
 </div>
 </div>
