--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ pointer-events: none;
 </div>
 </div>
 <!-- Project 4 -->
-<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="techwave">
+<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="ad-creatives">
 <div class="project-card-image">
 <img src="reel-ad.png" class="protected-image" alt="TechWave Motion Graphics">
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
@@ -689,9 +689,11 @@ const projectImages = {
   'oats1.jpg',
   'shoes-design.png'
 ],
-'techwave': [
-'https://readdy.ai/api/search-image?query=animated%20logo%20reveal%20and%20motion%20graphics%20for%20tech%20startup%2C%20showing%20dynamic%20transitions%20and%20modern%20design%20elements%2C%20professional%20motion%20design%2C%20high%20quality%20animation%20frames&width=600&height=400&seq=12350&orientation=landscape',
-'https://readdy.ai/api/search-image?query=motion%20graphics%20for%20tech%20startup%2C%20dynamic%20transitions%2C%20modern%20design%2C%20professional%20animation&width=600&height=400&seq=12359&orientation=landscape'
+'ad-creatives': [
+'ig-ad2.png',
+  'ig-ad3.png',
+  'ig-ad4.png',
+  'serum-ad.png'
 ],
 'vogue': [
 'https://readdy.ai/api/search-image?query=magazine%20layout%20design%20with%20editorial%20photography%20and%20typography%2C%20fashion%20magazine%20spread%20with%20clean%20grid%20layout%2C%20professional%20editorial%20design%2C%20high%20quality%20print%20design&width=600&height=400&seq=12351&orientation=landscape',
