--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@ pointer-events: none;
 </div>
 </div>
 <!-- Project 4 -->
-<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="ad-creatives">
+<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="portrait-ad-creatives">
 <div class="project-card-image">
 <img src="reel-ad.png" class="protected-image" alt="TechWave Motion Graphics">
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
@@ -689,7 +689,7 @@ const projectImages = {
   'oats1.jpg',
   'shoes-design.png'
 ],
-'ad-creatives': [
+'portrait-ad-creatives': [
 'ig-ad2.png',
   'ig-ad3.png',
   'ig-ad4.png',
