--- a/index.html
+++ b/index.html
@@ -671,7 +671,8 @@ const projectImages = {
 'thumbnail_2.png',
 'thumbnail_3.png',
 'thumbnail_4.png',
-'thumbnail_6.png'
+'thumbnail_6.png',
+'thumbnail_7.png'
 
 ],
 'ad-creatives': [
