--- a/index.html
+++ b/index.html
@@ -449,18 +449,18 @@ pointer-events: none;
 </div>
 </div>
 <!-- Project 5 -->
-<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="vogue">
+<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="Video-graphics">
 <div class="project-card-image">
 <img src="https://readdy.ai/api/search-image?query=magazine%20layout%20design%20with%20editorial%20photography%20and%20typography%2C%20fashion%20magazine%20spread%20with%20clean%20grid%20layout%2C%20professional%20editorial%20design%2C%20high%20quality%20print%20design&width=600&height=400&seq=12351&orientation=landscape" class="protected-image" alt="Vogue Editorial Design">
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
-<h3 class="text-xl font-bold mb-2">Vogue Editorial Design</h3>
-<p class="text-center mb-4">Magazine layout and typography for fashion publication</p>
-<span class="px-4 py-1 bg-white/20 rounded-full text-sm">Editorial Design</span>
+<h3 class="text-xl font-bold mb-2">Video graphics</h3>
+<p class="text-center mb-4">Video ads that capture attention and bring your brand stories to life.</p>
+<span class="px-4 py-1 bg-white/20 rounded-full text-sm">Video graphics</span>
 </div>
 </div>
 <div class="p-6">
-<h3 class="text-xl font-bold mb-2 text-darkGray">Vogue Editorial Design</h3>
-<p class="text-darkGray/80 mb-4">Created sophisticated editorial layouts and typography treatments for a high-end fashion magazine, balancing imagery and text.</p>
+<h3 class="text-xl font-bold mb-2 text-darkGray">Video graphics</h3>
+<p class="text-darkGray/80 mb-4">Visually captivating video ad designs that enhance brand appeal, drive engagement, and deliver your message effectively across digital platforms.</p>
 <a href="#" class="text-burgundy font-medium hover:underline open-modal">View Project</a>
 </div>
 </div>
@@ -696,7 +696,7 @@ const projectImages = {
   'ig-ad4.png',
   'serum-ad.png'
 ],
-'vogue': [
+'Video-graphics': [
 'https://readdy.ai/api/search-image?query=magazine%20layout%20design%20with%20editorial%20photography%20and%20typography%2C%20fashion%20magazine%20spread%20with%20clean%20grid%20layout%2C%20professional%20editorial%20design%2C%20high%20quality%20print%20design&width=600&height=400&seq=12351&orientation=landscape',
 'https://readdy.ai/api/search-image?query=fashion%20magazine%20layout%2C%20clean%20typography%2C%20professional%20editorial%20design&width=600&height=400&seq=12360&orientation=landscape'
 ],
