--- a/index.html
+++ b/index.html
@@ -451,7 +451,9 @@ pointer-events: none;
 <!-- Project 5 -->
 <div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="Video-graphics">
 <div class="project-card-image">
-<img src="https://readdy.ai/api/search-image?query=magazine%20layout%20design%20with%20editorial%20photography%20and%20typography%2C%20fashion%20magazine%20spread%20with%20clean%20grid%20layout%2C%20professional%20editorial%20design%2C%20high%20quality%20print%20design&width=600&height=400&seq=12351&orientation=landscape" class="protected-image" alt="Vogue Editorial Design">
+<<video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
+<source src="ad-videos.mp4" type="video/mp4">
+<video>
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
 <h3 class="text-xl font-bold mb-2">Video graphics</h3>
 <p class="text-center mb-4">Video ads that capture attention and bring your brand stories to life.</p>
