--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ pointer-events: none;
 <!-- Project 5 -->
 <div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="Video-graphics">
 <div class="project-card-image">
-<<video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
+<video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
 <source src="ad-videos.mp4" type="video/mp4">
 <video>
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
