--- a/index.html
+++ b/index.html
@@ -467,20 +467,20 @@ pointer-events: none;
 </div>
 </div>
 <!-- Project 6 -->
-<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="harmony">
+<div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="mockups">
 <div class="project-card-image">
 <div class="relative overflow-hidden">
 <img src="https://readdy.ai/api/search-image?query=event%20branding%20and%20promotional%20materials%20for%20music%20festival%2C%20showing%20posters%2C%20tickets%2C%20wristbands%20and%20signage%20with%20cohesive%20design%2C%20professional%20event%20branding%2C%20high%20quality%20print%20design&width=600&height=400&seq=12352&orientation=landscape" class="protected-image" alt="Harmony Music Festival">
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
-<h3 class="text-xl font-bold mb-2">Harmony Music Festival</h3>
-<p class="text-center mb-4">Complete event branding and promotional materials</p>
-<span class="px-4 py-1 bg-white/20 rounded-full text-sm">Event Branding</span>
+<h3 class="text-xl font-bold mb-2">Mockups</h3>
+<p class="text-center mb-4">Clean, modern, realistic, professional mockup designs.</p>
+<span class="px-4 py-1 bg-white/20 rounded-full text-sm">Mockups</span>
 </div>
 </div>
 </div>
 <div class="p-6">
-<h3 class="text-xl font-bold mb-2 text-darkGray">Harmony Music Festival</h3>
-<p class="text-darkGray/80 mb-4">Developed comprehensive branding and promotional materials for a three-day music festival, including posters, tickets, and digital assets.</p>
+<h3 class="text-xl font-bold mb-2 text-darkGray">Mockups</h3>
+<p class="text-darkGray/80 mb-4">Showcasing high-quality, realistic, and professional mockup designs to present your products, branding, and creativity in a visually appealing way.</p>
 <a href="#" class="text-burgundy font-medium hover:underline open-modal">View Project</a>
 </div>
 </div>
@@ -702,7 +702,7 @@ const projectImages = {
 'https://readdy.ai/api/search-image?query=magazine%20layout%20design%20with%20editorial%20photography%20and%20typography%2C%20fashion%20magazine%20spread%20with%20clean%20grid%20layout%2C%20professional%20editorial%20design%2C%20high%20quality%20print%20design&width=600&height=400&seq=12351&orientation=landscape',
 'https://readdy.ai/api/search-image?query=fashion%20magazine%20layout%2C%20clean%20typography%2C%20professional%20editorial%20design&width=600&height=400&seq=12360&orientation=landscape'
 ],
-'harmony': [
+'mockups': [
 'https://readdy.ai/api/search-image?query=event%20branding%20and%20promotional%20materials%20for%20music%20festival%2C%20showing%20posters%2C%20tickets%2C%20wristbands%20and%20signage%20with%20cohesive%20design%2C%20professional%20event%20branding%2C%20high%20quality%20print%20design&width=600&height=400&seq=12352&orientation=landscape',
 'https://readdy.ai/api/search-image?query=music%20festival%20poster%2C%20vibrant%20design%2C%20professional%20event%20branding&width=600&height=400&seq=12361&orientation=landscape'
 ]
@@ -783,3 +783,4 @@ e.preventDefault();
 </script>
 </body>
 </html>
+
