--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@ pointer-events: none;
 <div class="project-card bg-white rounded-lg overflow-hidden shadow-lg group" data-project="mockups">
 <div class="project-card-image">
 <div class="relative overflow-hidden">
-<img src="https://readdy.ai/api/search-image?query=event%20branding%20and%20promotional%20materials%20for%20music%20festival%2C%20showing%20posters%2C%20tickets%2C%20wristbands%20and%20signage%20with%20cohesive%20design%2C%20professional%20event%20branding%2C%20high%20quality%20print%20design&width=600&height=400&seq=12352&orientation=landscape" class="protected-image" alt="Harmony Music Festival">
+<img src="mockup-card.png" alt="Mockup">
 <div class="project-overlay absolute inset-0 flex flex-col justify-center items-center p-6 text-white">
 <h3 class="text-xl font-bold mb-2">Mockups</h3>
 <p class="text-center mb-4">Clean, modern, realistic, professional mockup designs.</p>
@@ -783,4 +783,5 @@ e.preventDefault();
 </script>
 </body>
 </html>
+
 
