--- a/index.html
+++ b/index.html
@@ -703,8 +703,9 @@ const projectImages = {
 'https://readdy.ai/api/search-image?query=fashion%20magazine%20layout%2C%20clean%20typography%2C%20professional%20editorial%20design&width=600&height=400&seq=12360&orientation=landscape'
 ],
 'mockups': [
-'https://readdy.ai/api/search-image?query=event%20branding%20and%20promotional%20materials%20for%20music%20festival%2C%20showing%20posters%2C%20tickets%2C%20wristbands%20and%20signage%20with%20cohesive%20design%2C%20professional%20event%20branding%2C%20high%20quality%20print%20design&width=600&height=400&seq=12352&orientation=landscape',
-'https://readdy.ai/api/search-image?query=music%20festival%20poster%2C%20vibrant%20design%2C%20professional%20event%20branding&width=600&height=400&seq=12361&orientation=landscape'
+'mock-headset.png',
+'mock-starbucks.png',
+ 'mock-thumb1.png' 
 ]
 };
 
@@ -783,5 +784,6 @@ e.preventDefault();
 </script>
 </body>
 </html>
+
 
 
