--- a/index.html
+++ b/index.html
@@ -699,8 +699,15 @@ const projectImages = {
   'serum-ad.png'
 ],
 'Video-graphics': [
-'https://readdy.ai/api/search-image?query=magazine%20layout%20design%20with%20editorial%20photography%20and%20typography%2C%20fashion%20magazine%20spread%20with%20clean%20grid%20layout%2C%20professional%20editorial%20design%2C%20high%20quality%20print%20design&width=600&height=400&seq=12351&orientation=landscape',
-'https://readdy.ai/api/search-image?query=fashion%20magazine%20layout%2C%20clean%20typography%2C%20professional%20editorial%20design&width=600&height=400&seq=12360&orientation=landscape'
+'bluetooth-video.mp4',
+ 'BRIYANI-video.mp4', 
+  'burger2-post-video.mp4',
+  'burger-pamplet-video.mp4',
+  'earbuds-video.mp4',
+  'pizza-video1.mp4',
+  'shoes-design-video.mp4',
+  'shrimp-video.mp4',
+  'starbucks-video.mp4'
 ],
 'mockups': [
 'mock-headset.png',
@@ -784,6 +791,7 @@ e.preventDefault();
 </script>
 </body>
 </html>
+
 
 
 
