--- a/index.html
+++ b/index.html
@@ -711,7 +711,8 @@ const projectImages = {
 'mockups': [
 'mock-headset.png',
 'mock-starbucks.png',
-'mock-thumb1.png'
+'mock-thumb1.png',
+'graphic-ad-mockup.png'
 ]
 };
 
@@ -807,3 +808,4 @@ e.preventDefault();
 </script>
 </body>
 </html>
+
