--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ const projectImages = {
 'mock-headset.png',
 'mock-starbucks.png',
 'mock-thumb1.png',
-'graphic-ad-mockup.png'
+'graphic-ad-mockup1.png'
 ]
 };
 
@@ -808,4 +808,5 @@ e.preventDefault();
 </script>
 </body>
 </html>
+
 
