--- a/index.html
+++ b/index.html
@@ -485,10 +485,10 @@ pointer-events: none;
 </div>
 </div>
 </div>
-<div class="text-center mt-12">
+<!-- <div class="text-center mt-12">
 <a href="#" class="inline-block gradient-bg text-white px-8 py-3 rounded-button font-semibold hover:opacity-90 transition-all button">View All Projects</a>
 </div>
-</div>
+</div> -->
 </section>
 
 <!-- Contact Section -->
@@ -808,5 +808,6 @@ e.preventDefault();
 </script>
 </body>
 </html>
+
 
 
